--- a/clusters/moo-cluster/flux-system/gotk-components.yaml
+++ b/clusters/moo-cluster/flux-system/gotk-components.yaml
@@ -1,10 +1,13 @@
+---
+# Flux version: v0.20.1
+# Components: source-controller,kustomize-controller,helm-controller,notification-controller,image-automation-controller,image-reflector-controller
 apiVersion: v1
 kind: Namespace
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: flux-system
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -16,7 +19,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: alerts.notification.toolkit.fluxcd.io
 spec:
   group: notification.toolkit.fluxcd.io
@@ -228,7 +231,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: buckets.source.toolkit.fluxcd.io
 spec:
   group: source.toolkit.fluxcd.io
@@ -459,7 +462,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: gitrepositories.source.toolkit.fluxcd.io
 spec:
   group: source.toolkit.fluxcd.io
@@ -789,7 +792,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: helmcharts.source.toolkit.fluxcd.io
 spec:
   group: source.toolkit.fluxcd.io
@@ -1044,7 +1047,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: helmreleases.helm.toolkit.fluxcd.io
 spec:
   group: helm.toolkit.fluxcd.io
@@ -1804,7 +1807,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: helmrepositories.source.toolkit.fluxcd.io
 spec:
   group: source.toolkit.fluxcd.io
@@ -2022,7 +2025,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: imagepolicies.image.toolkit.fluxcd.io
 spec:
   group: image.toolkit.fluxcd.io
@@ -2611,7 +2614,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: imagerepositories.image.toolkit.fluxcd.io
 spec:
   group: image.toolkit.fluxcd.io
@@ -3169,7 +3172,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: imageupdateautomations.image.toolkit.fluxcd.io
 spec:
   group: image.toolkit.fluxcd.io
@@ -3971,7 +3974,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: kustomizations.kustomize.toolkit.fluxcd.io
 spec:
   group: kustomize.toolkit.fluxcd.io
@@ -5046,7 +5049,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: providers.notification.toolkit.fluxcd.io
 spec:
   group: notification.toolkit.fluxcd.io
@@ -5246,7 +5249,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: receivers.notification.toolkit.fluxcd.io
 spec:
   group: notification.toolkit.fluxcd.io
@@ -5463,7 +5466,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: helm-controller
   namespace: flux-system
 ---
@@ -5473,7 +5476,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: image-automation-controller
   namespace: flux-system
 ---
@@ -5483,7 +5486,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: image-reflector-controller
   namespace: flux-system
 ---
@@ -5493,7 +5496,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: kustomize-controller
   namespace: flux-system
 ---
@@ -5503,7 +5506,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: notification-controller
   namespace: flux-system
 ---
@@ -5513,7 +5516,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: source-controller
   namespace: flux-system
 ---
@@ -5523,7 +5526,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: crd-controller-flux-system
 rules:
 - apiGroups:
@@ -5604,7 +5607,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: cluster-reconciler-flux-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -5624,7 +5627,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: crd-controller-flux-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -5656,7 +5659,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
     control-plane: controller
   name: notification-controller
   namespace: flux-system
@@ -5676,7 +5679,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
     control-plane: controller
   name: source-controller
   namespace: flux-system
@@ -5696,7 +5699,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
     control-plane: controller
   name: webhook-receiver
   namespace: flux-system
@@ -5716,7 +5719,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
     control-plane: controller
   name: helm-controller
   namespace: flux-system
@@ -5789,7 +5792,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
     control-plane: controller
   name: image-automation-controller
   namespace: flux-system
@@ -5864,7 +5867,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
     control-plane: controller
   name: image-reflector-controller
   namespace: flux-system
@@ -5943,7 +5946,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
     control-plane: controller
   name: kustomize-controller
   namespace: flux-system
@@ -6018,7 +6021,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
     control-plane: controller
   name: notification-controller
   namespace: flux-system
@@ -6094,7 +6097,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
     control-plane: controller
   name: source-controller
   namespace: flux-system
@@ -6127,7 +6130,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: ghcr.io/fluxcd/source-controller:v0.17.0
+        image: ghcr.io/fluxcd/source-controller:v0.17.1
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
@@ -6178,7 +6181,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: allow-egress
   namespace: flux-system
 spec:
@@ -6198,7 +6201,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: allow-scraping
   namespace: flux-system
 spec:
@@ -6218,7 +6221,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.20.0
+    app.kubernetes.io/version: v0.20.1
   name: allow-webhooks
   namespace: flux-system
 spec:
@@ -6230,3 +6233,4 @@ spec:
       app: notification-controller
   policyTypes:
   - Ingress
+---
