have to include secret in kustomization.yaml

--- a/secrets/moo-cluster/kustomization.yaml
+++ b/secrets/moo-cluster/kustomization.yaml
@@ -23,6 +23,7 @@ resources:
 #- keycloak-hephy-pro-tls.yaml
 - linkerd-demos-rw.yaml
 #- oidc-proxy-tls.yaml
+- okteto-regcred-flux.yaml
 - pgp-public-keys.yaml
 - vpn-admin-hephy-pro-tls.yaml
 - vpn-admin-superuser.yaml
