--- a/clusters/moo-cluster/flux-system/kustomization.yaml
+++ b/clusters/moo-cluster/flux-system/kustomization.yaml
@@ -3,18 +3,18 @@ kind: Kustomization
 resources:
 - gotk-components.yaml
 - gotk-sync.yaml
-patches:
-  - target:
-      version: v1
-      group: apps
-      kind: Deployment
-      name: image-reflector-controller
-      namespace: flux-system
-    patch: |-
-      - op: add
-        path: /spec/template/spec/containers/0/args/-
-        value: --aws-autologin-for-ecr
 patchesStrategicMerge: []
+#patches:
+#  - target:
+#      version: v1
+#      group: apps
+#      kind: Deployment
+#      name: image-reflector-controller
+#      namespace: flux-system
+#    patch: |-
+#      - op: add
+#        path: /spec/template/spec/containers/0/args/-
+#        value: --aws-autologin-for-ecr
 #- gotk-patches.yaml
 images: []
 #- name: ghcr.io/fluxcd/source-controller
