--- a/clusters/moo-cluster/ingress-nginx/infrastructure.yaml
+++ b/clusters/moo-cluster/ingress-nginx/infrastructure.yaml
@@ -5,7 +5,8 @@ metadata:
   namespace: flux-system
 spec:
   interval: 173m
-  retryInterval: 10m
+  retryInterval: 5m0s
+  timeout: 3m0s
   sourceRef:
     kind: GitRepository
     name: flux-system
