--- a/clusters/moo-cluster/local-path-provisioner/infrastructure.yaml
+++ b/clusters/moo-cluster/local-path-provisioner/infrastructure.yaml
@@ -5,7 +5,8 @@ metadata:
   namespace: flux-system
 spec:
   interval: 149m
-  retryInterval: 10m
+  retryInterval: 5m0s
+  timeout: 2m0s
   sourceRef:
     kind: GitRepository
     name: flux-system
