try adding some automation annotations and see

--- a/apps/flux-legacy/okteto-flux-helmrelease.yaml
+++ b/apps/flux-legacy/okteto-flux-helmrelease.yaml
@@ -26,6 +26,10 @@ spec:
       image:
         repository: docker.io/fluxcd/flux-prerelease
         tag: master-5c6a9644
+      memcached:
+        annotations:
+          fluxcd.io/automated: "true"
+          fluxcd.io/tag.memcached: regex:^1.6.10-alpine$
       git:
         branch: own-branch
         url: ssh://git@github.com/kingdonb/flux-getting-started.git
@@ -37,6 +41,9 @@ spec:
         create: true
     secret: df10802a8a2bd4ddacf0323838f495810ce61748
     helm-operator:
+      annotations:
+        fluxcd.io/automated: "true"
+        fluxcd.io/tag.podinfod: semver:1.4.0
       rbac:
         create: true
       serviceAccount:
