flux should not scan jenkins images
there are probably thousands, and:

ts=2021-11-02T02:58:07.055975319Z caller=repocachemanager.go:260 component=warmer canonical_name=index.docker.io/jenkins/jenkins auth={map[]} err="failed to parse 2 timestamp label(s) as RFC3339 (org.label-schema.build-date, org.opencontainers.image.created); ask the repository administrator to correct this as it conflicts with the spec" ref=jenkins/jenkins:2.298-centos7

--- a/apps/flux-legacy/okteto-flux-helmrelease.yaml
+++ b/apps/flux-legacy/okteto-flux-helmrelease.yaml
@@ -57,6 +57,8 @@ spec:
       git:
         branch: own-branch
         url: ssh://git@github.com/kingdonb/flux-getting-started.git
+      registry:
+        excludeImage: jenkins/*
       rbac:
         create: true
       serviceAccount:
