--- a/apps/flux-legacy/okteto-flux-helmrelease.yaml
+++ b/apps/flux-legacy/okteto-flux-helmrelease.yaml
@@ -58,7 +58,7 @@ spec:
         branch: own-branch
         url: ssh://git@github.com/kingdonb/flux-getting-started.git
       registry:
-        excludeImage: index.docker.io/jenkins/*,index.docker.io/library/*,index.docker.io/okteto/*,docker.io/weaveworks/*,docker.io/jenkins/*,index.docker.io/weaveworks/*,index.docker.io/grafana/*,index.docker.io/datawire/*
+        excludeImage: index.docker.io/jenkins/*,index.docker.io/library/*,index.docker.io/okteto/*,docker.io/weaveworks/*,docker.io/jenkins/*,index.docker.io/weaveworks/*,index.docker.io/grafana/*,index.docker.io/datawire/*,quay.io/keycloak/*,index.docker.io/kingdonb/*,index.docker.io/hephy/*,index.docker.io/fluxcd/*
       rbac:
         create: true
       serviceAccount:
