--- a/apps/flux-legacy/okteto-flux-helmrelease.yaml
+++ b/apps/flux-legacy/okteto-flux-helmrelease.yaml
@@ -58,7 +58,7 @@ spec:
         branch: own-branch
         url: ssh://git@github.com/kingdonb/flux-getting-started.git
       registry:
-        excludeImage: index.docker.io/jenkins/*,index.docker.io/library/*,index.docker.io/okteto/*,docker.io/weaveworks/*,index.docker.io/weaveworks/*,index.docker.io/grafana/*,index.docker.io/datawire/*,quay.io/keycloak/*,index.docker.io/kingdonb/*,index.docker.io/hephy/*,index.docker.io/fluxcd/*,index.docker.io/prom/*,index.docker.io/buoyantio/*,index.docker.io/kiwigrid/*,cr.l5d.io/linkerd/*,index.docker.io/rancher/*,quay.io/jetstack/*,docker.l5d.io/buoyantio/*,quay.io/metallb/*,quay.io/kiwigrid/*,127.0.0.1:5555/*,ghcr.io/fluxcd/*,k8s.gcr.io/metrics-server/*,ghcr.io/linuxserver/*,k8s.gcr.io/ingress-nginx/*,k8s.gcr.io/kube-state-metrics/*,quay.io/prometheus/*,quay.io/prometheus-operator/*,k8s.gcr.io/coredns/*
+        excludeImage: index.docker.io/jenkins/*,index.docker.io/library/*,index.docker.io/okteto/*,docker.io/weaveworks/*,index.docker.io/weaveworks/*,index.docker.io/grafana/*,index.docker.io/datawire/*,quay.io/keycloak/*,index.docker.io/kingdonb/*,index.docker.io/hephy/*,index.docker.io/fluxcd/*,index.docker.io/prom/*,index.docker.io/buoyantio/*,index.docker.io/kiwigrid/*,cr.l5d.io/linkerd/*,index.docker.io/rancher/*,quay.io/jetstack/*,docker.l5d.io/buoyantio/*,quay.io/metallb/*,quay.io/kiwigrid/*,127.0.0.1:5555/*,ghcr.io/fluxcd/*,k8s.gcr.io/metrics-server/*,ghcr.io/linuxserver/*,k8s.gcr.io/ingress-nginx/*,k8s.gcr.io/kube-state-metrics/*,quay.io/prometheus/*,quay.io/prometheus-operator/*,k8s.gcr.io/coredns/*,k8s.gcr.io/kube-proxy
       rbac:
         create: true
       serviceAccount:
