don't forget to give namespaces, + actually apply

--- a/secrets/moo-cluster/kustomization.yaml
+++ b/secrets/moo-cluster/kustomization.yaml
@@ -31,3 +31,5 @@ resources:
 - vpn-user-kingdon.yaml
 - webhook-slack-url-secret.yaml
 - webhook-token-secret.yaml
+- podinfo-regcred.yaml
+- podinfo-dev-regcred.yaml
