add buoyant-cloud manifests

--- a/secrets/moo-cluster/kustomization.yaml
+++ b/secrets/moo-cluster/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
 - ambassador-tls/podinfo-dev.hephy.pro-tls.yaml
 - ambassador-tls/podinfo.hephy.pro-tls.yaml
 - ambassador-tls/simplest-2dcommitbee.deis.hephy.pro-tls.yaml
+- buoyant-cloud-id.yaml
 - deis-db-admin-password.yaml
 - docker-registry-admin.yaml
 - flux-system-rw-secret.yaml
