put refreshed secrets back in circulation
take expired ones out for now

--- a/secrets/moo-cluster/kustomization.yaml
+++ b/secrets/moo-cluster/kustomization.yaml
@@ -16,19 +16,19 @@ resources:
 - docker-registry-admin.yaml
 - flux-system-rw-secret.yaml
 - github-discussions-secret.yaml
-#- gitno-hephy-pro-tls.yaml
+- gitno-hephy-pro-tls.yaml
 - jenkins-github-secret.yaml
 - jenkins-hephy-pro-tls.yaml
 - jenkins-hooks-hephy-pro-tls.yaml
 - keycloak-db-pass-secret.yaml
-#- keycloak-hephy-pro-tls.yaml
+- keycloak-hephy-pro-tls.yaml
 - linkerd-demos-rw.yaml
-#- oidc-proxy-tls.yaml
+- oidc-proxy-tls.yaml
 - okteto-regcred-flux.yaml
 - pgp-public-keys.yaml
-- vpn-admin-hephy-pro-tls.yaml
+#- vpn-admin-hephy-pro-tls.yaml
 - vpn-admin-superuser.yaml
-- vpn-hephy-pro-tls.yaml
+#- vpn-hephy-pro-tls.yaml
 - vpn-user-kingdon.yaml
 - webhook-slack-url-secret.yaml
 - webhook-token-secret.yaml
