--- a/clusters/moo-cluster/my-secrets/certificates.yaml
+++ b/clusters/moo-cluster/my-secrets/certificates.yaml
@@ -1,29 +1,18 @@
 ---
-apiVersion: source.toolkit.fluxcd.io/v1beta1
-kind: GitRepository
-metadata:
-  name: my-secrets-branch
-  namespace: flux-system
-spec:
-  interval: 40m0s
-  ref:
-    branch: secrets
-  url: https://github.com/kingdon-ci/jenkins-infra
----
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
-  name: my-secrets
+  name: certificates
   namespace: flux-system
 spec:
-  suspend: false
+  #suspend: false
   decryption:
     provider: sops
     secretRef:
       name: sops-gpg
   interval: 30m0s
   retryInterval: 1m
-  path: ./secrets/moo-cluster
+  path: ./certificates/moo-cluster
   prune: false
   sourceRef:
     kind: GitRepository
