--- a/clusters/moo-cluster/my-secrets/kustomization.yaml
+++ b/clusters/moo-cluster/my-secrets/kustomization.yaml
@@ -1,4 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- infrastructure.yaml
+- my-secrets-gitrepo.yaml
+- my-secrets.yaml
+- certificates.yaml
