--- a/clusters/moo-cluster/flux-system-extras/infrastructure.yaml
+++ b/clusters/moo-cluster/flux-system-extras/infrastructure.yaml
@@ -4,21 +4,15 @@ metadata:
   name: flux-system-extras
   namespace: flux-system
 spec:
-  interval: 1m
-  retryInterval: 10m
+  interval: 75m
+  retryInterval: 4m
+  timeout: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
   path: ./infrastructure/flux-system-extras
   dependsOn:
     - name: ingress-nginx
-    - name: my-secrets
-  prune: false
-  wait: false
-  validation: client
-  healthChecks:
-    - apiVersion: networking.k8s.io/v1
-      kind: Ingress
-      name: webhook-receiver
-      namespace: flux-system
-  timeout: 2m0s
+    - name: certificates
+  prune: true
+  wait: true
