--- a/clusters/moo-cluster/jenkins/flux-kustomization.yaml
+++ b/clusters/moo-cluster/jenkins/flux-kustomization.yaml
@@ -17,21 +17,8 @@ spec:
   dependsOn:
     - name: ingress-nginx
     - name: persistence
+    - name: certificates
     - name: my-secrets
-  healthChecks:
-    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
-      kind: HelmRelease
-      name: jenkinsci
-      namespace: flux-system
-    - apiVersion: apps/v1
-      kind: StatefulSet
-      name: jenkins
-      namespace: jenkins
-    - apiVersion: v1
-      kind: PersistentVolume
-      name: jenkins
-      namespace: jenkins
-  validation: client
   patches:
     - target:
         kind: HelmRelease
