--- a/clusters/moo-cluster/kube-oidc-proxy/infrastructure.yaml
+++ b/clusters/moo-cluster/kube-oidc-proxy/infrastructure.yaml
@@ -1,4 +1,4 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: kube-oidc-proxy
@@ -14,10 +14,5 @@ spec:
   dependsOn:
     - name: ingress-nginx
     - name: my-secrets
-  prune: false
-  validation: client
-  healthChecks:
-    - apiVersion: apps/v1
-      kind: Deployment
-      name: kube-oidc-proxy
-      namespace: kube-oidc-proxy
+    - name: certificates
+  prune: true
