--- a/clusters/moo-cluster/argocd/flux-kustomization.yaml
+++ b/clusters/moo-cluster/argocd/flux-kustomization.yaml
@@ -1,22 +1,17 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: argocd
   namespace: flux-system
 spec:
-  interval: 1m0s
-  retryInterval: 10m0s
+  interval: 10m0s
+  retryInterval: 5m0s
+  timeout: 2m0s
   suspend: true
-  path: ./apps/argocd
   prune: true
+  path: ./apps/argocd
   sourceRef:
     kind: GitRepository
     name: flux-system
   dependsOn:
-    - name: my-secrets
-  healthChecks:
-    - apiVersion: apps/v1
-      kind: Deployment
-      name: argocd-server
-      namespace: argocd
-  timeout: 2m0s
+    - name: certificates
