--- a/clusters/moo-cluster/metrics-server/infrastructure.yaml
+++ b/clusters/moo-cluster/metrics-server/infrastructure.yaml
@@ -1,4 +1,4 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: metrics-server
@@ -11,8 +11,8 @@ spec:
     kind: GitRepository
     name: flux-system
   path: ./infrastructure/metrics-server
-  prune: false
-  validation: client
+  prune: true
+  wait: true
   healthChecks:
     - apiVersion: apps/v1
       kind: Deployment
