--- a/clusters/moo-cluster/my-secrets/my-secrets.yaml
+++ b/clusters/moo-cluster/my-secrets/my-secrets.yaml
@@ -1,5 +1,4 @@
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: my-secrets
@@ -12,8 +11,10 @@ spec:
       name: sops-gpg
   interval: 30m0s
   retryInterval: 1m
+  timeout: 30s
   path: ./secrets/moo-cluster
   prune: false
+  wait: true
   sourceRef:
     kind: GitRepository
     name: my-secrets-branch
