--- a/clusters/moo-cluster/openvpn-as/flux-kustomization.yaml
+++ b/clusters/moo-cluster/openvpn-as/flux-kustomization.yaml
@@ -1,4 +1,4 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: openvpn
@@ -10,7 +10,7 @@ spec:
  #suspend: true
   path: ./apps/openvpn-as
   prune: false
-  wait: true
+ #wait: true
   sourceRef:
     kind: GitRepository
     name: flux-system
